Wed Nov 24 08:07:21 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        
          Removed generation of ace/config-all.h include in the
          skeleton source file, since it is already pulled in by
          the stub header file.
          
        * TAO_IDL/be/be_visitor_root/root_sth.cpp:
        
          Removed generation of TAO_HAS_USING_KEYWORD guards - it is
          a legacy of the days when we supported platforms without
          namespaces.
          
          Thanks to Johhny Willemsen <jwillemsen@remedy.nl> for
          pointing out the above redundant code generation.

Wed Nov 24 14:03:11 2004  Martin Corino  <mcorino@remedy.nl>

	* orbsvcs/orbsvcs/CosLoadBalancing.idl:
	* orbsvcs/examples/LoadBalancing/RPS_Monitor.h:
	* orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.h:
	* orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.h:
	* orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/RPS_Monitor.h:
	* orbsvcs/tests/LoadBalancing/LoadMonitor/CPU/client.cpp:

	  Changed CosLoadBalancing::CPU to CosLoadBalancing::LoadAverage because
	  of nameclash with CPU macro in VxWorks builds (which is absolutely essential
	  there:-).

Tue Nov 23 21:34:11 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/CDR_Encaps_Codec.cpp (encode_value):

	  Fixed a memory leak that occured when the CORBA::Any being
	  marshaled into the CDR encapsulation didn't contain a populated
	  ACE_Message_Block.  Thanks to Lothar Werzinger <lothar at xcerla
	  dot com> for reporting the leak.

Tue Nov 23 11:45:27 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Update for new Notification Service implementation.

Tue Nov 23 13:33:35 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Any/ProxyPushConsumer.h: